--- a/package.json
+++ b/package.json
@@ -1,41 +1,20 @@
 {
-  "name": "instagram-clone",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.27.2",
-    "firebase": "^7.24.0",
-    "image-file-to-base64-exif": "^1.0.3",
-    "pusher-js": "^7.1.1-beta",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-flip-move": "^3.0.4",
-    "react-instagram-embed": "^1.5.0",
-    "react-scripts": "3.4.1"
-  },
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.3",
+    "pusher": "^5.1.1-beta"
   }
 }
